# stylizedterminal

./: .gitignore  LICENSE  README.md  pyproject.toml
src/stylizedterminal/: __init__.py  core.py
src/textcanvas/: __init__.py  core.py
tests/: test_core.py
