[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stylizedterminal"
version = "1.1.1"
description = "A lightweight terminal styling helper with ANSI colors, cursor movement, and ASCII art helpers."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Tim Roelands" }]
license = { text = "MIT" }
dependencies = []
keywords = ["terminal", "ansi", "ascii", "styling"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Terminals",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
